--- a/_includes/header.html
+++ b/_includes/header.html
@@ -94,7 +94,7 @@
                   
                   <!-- logo -->
                   <div id="logo" class="logo">
-                    <a href="index.html"><img id="logo_img" src="{{ site.logo }}" alt="SMBS_LOGO" style="width: 200px; height: 70px;"></a>
+                    <a href="/"><img id="logo_img" src="{{ site.logo }}" alt="SMBS_LOGO" style="width: 200px; height: 70px;"></a>
                   </div>
 
                  
@@ -139,7 +139,7 @@
                         <ul class="nav navbar-nav ">
 
                           <!-- mega-menu start -->
-                          <li class=" active mega-menu">
+                          <li class=" mega-menu">
                             <a class="scroll-to" href="/">Accueil</a>
                             
                           </li>
