--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -29,7 +29,7 @@
       
       {% include page_produit.html %}
       
-      
+      {% include parallax_qualite.html %}
 
       {% include footer.html %}
 
