--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -28,7 +28,7 @@
     
       {% include page_category.html %}
       
-      
+      {% include parallax_qualite.html %}
 
       {% include footer.html %}
 
