--- a/_includes/page_produit.html
+++ b/_includes/page_produit.html
@@ -49,10 +49,11 @@
 										</div>
 										<div class="tab-pane" id="pill-2">
 											<div class="embed-responsive embed-responsive-16by9">
-												<iframe class="embed-responsive-item" src="{{ page.video }}"></iframe>
-												<p>Vidéo descriptive du produit {{ page.title }}.</p>
+												<iframe class="embed-responsive-item" src="//player.vimeo.com/video/29198414?byline=0&amp;portrait=0"></iframe>
+												<p><a href="http://vimeo.com/29198414">Vidéo descriptive du produit</a> from <a href="http://vimeo.com/staff">Vimeo Staff</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 											</div>
 										</div>
+										
 									</div>
 									<!-- pills end -->
 								</div>
