--- a/_includes/page_produits.html
+++ b/_includes/page_produits.html
@@ -35,7 +35,7 @@
 						</div>
 						<div class="col-sm-6 ">
 							<div class="body">
-								<h3 class="title"><a href="portfolio-item.html">{{ category.title }}</a></h3>
+								<h3 class="title"><a href="{{ category.url }}">{{ category.title }}</a></h3>
 								
 								<div class="separator-2"></div>
 								<p class="mb-10">{{ category.content }}</p>
