--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -11,7 +11,7 @@
   <!-- "pattern-1 ... pattern-9": background patterns for boxed layout mode e.g. <body class="boxed pattern-1"> -->
   <!-- "transparent-header": makes the header transparent and pulls the banner to top -->
   <!-- "gradient-background-header": applies gradient background to header -->
-  <!-- "page-loader-1 ... page-loader-6": add a page loader to the page (more info @components-page-loaders.html) -->
+  <!-- "page-loader-1 ... page-loader-6": add a page loader to the page (more info @components-pae-loaders.html) -->
   <body class="no-trans  transparent-header  ">
 
     <!-- scrollToTop -->
