--- a/_includes/header.html
+++ b/_includes/header.html
@@ -68,7 +68,7 @@
           
           <div class="container">
             <div class="row">
-              <div class="col-md-3 ">
+              <div class="col-md-6 ">
                 <!-- header-left start -->
                 <!-- ================ -->
                 <div class="header-left clearfix">
@@ -103,7 +103,7 @@
                 <!-- header-left end -->
 
               </div>
-              <div class="col-md-9">
+              <div class="col-md-6">
           
                 <!-- header-right start -->
                 <!-- ================ -->
@@ -145,9 +145,28 @@
                           </li>
                           <!-- mega-menu end -->
                           <!-- mega-menu start -->
-                          <li class="" >
-                            <a class="scroll-to" href="/produits.html">Produits</a>
-                            
+                          <li class="dropdown  mega-menu narrow" >
+                            <a href="/produits.html" class="dropdown-toggle" data-toggle="dropdown">Produits</a>
+                            <ul class="dropdown-menu">
+                              <li>
+                                <div class="row">
+                                  <div class="col-md-12">
+                                    <div class="row">
+                                    {% assign categories = site.categories %}
+                                    {% for category in categories%}
+                                      <div class="col-sm-6">
+                                        <div class="divider"></div>
+                                        <ul class="menu">
+                                          <li ><a href="{{category.url }}"><i class="icon-share pr-10"></i>{{category.title }}</a></li>
+                                          
+                                        </ul>
+                                      </div>
+                                    {% endfor %}
+                                    </div>
+                                  </div>
+                                </div>
+                              </li>
+                            </ul>
                           </li>
                           <!-- mega-menu end -->
                           <li class=" ">
