--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,18 +30,18 @@
       <!-- ================ -->
       {% include slider.html %}
       <!-- banner end -->
-      <!-- section start -->
-      <!-- ================ -->
-      {% include categories.html %}
-      <!-- section end -->
+      
       
       <div id="products"></div>
 
       <!-- section start -->
       <!-- ================ -->
-      {% include products.html %}
+      {% include products1.html %}
       <!-- section end -->
-
+      <!-- section start -->
+      <!-- ================ -->
+      {% include categories.html %}
+      <!-- section end -->
      
 
       <!-- section start -->
