--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -1,8 +1,8 @@
-<section id="categories" class="section default-bg clearfix">
+<section id="categories" class="section clearfix">
         <div class="container">
           <div class="row">
             <div class="col-md-8 col-md-offset-2">
-              <h2 class="text-center">Toutes nos <strong>Categories</strong></h2>
+              <h2 class="text-center">Toutes nos <strong class="text-default">Categories</strong></h2>
               <div class="separator"></div>
               
             </div>
